--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<header id="header">
 
 		<!-- Logo -->
-		<h1 id="logo"><a href="#"><img src="images/logo.jpg" alt="logo" height="18">JWR — Jeugdwerkgroep Ruimtevaart</a></h1>
+		<h1 id="logo">JWR — Jeugdwerkgroep Ruimtevaart</a></h1>
 
 		<!-- Nav -->
 		<nav id="nav">
