--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
 	<li>
 		<a href="mailto:info@jwronline.be" target="mail" class="fa solo fa-envelope"><span>Mail</span></a>
 	</li>
+	<li>
+		<a href="https://github.com/jwronline" target="github" class="fa solo fa-github"><span>GitHub</span></a>
+	</li>
 </ul>
 
 <!-- Menu -->
