--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</header>
 
 			<p>
-				Je kan bij ons terecht vanaf 10 jaar (9 voor het <a href="http://jwrjcw.tumblr.com/post/105685590776/space-camp-2015-de-onbekende-ijsplaneet" target="kamp">kamp</a>) voor ruimtevaart, sterrenkunde en wetenschap en techniek in het algemeen.
+				Je kan bij ons terecht vanaf 10 jaar (9 voor het <a href="http://jwrjcw.tumblr.com/post/105685590776/space-camp-2015-de-onbekende-ijsplaneet">kamp</a>) voor ruimtevaart, sterrenkunde en wetenschap en techniek in het algemeen.
 			</p>
 			<p>
 				De jongste leden (vijfde leerjaar tot tweede middelbaar) komen samen in de afdeling Ruimtekids. Je beleeft er samen met je vrienden om de twee/drie weken op zaterdagnamiddag telkens nieuwe ruimte-avonturen.
@@ -201,16 +201,16 @@
 -->
 <ul class="actions">
 	<li>
-		<a href="https://plus.google.com/communities/117635218583198517430" target="googleplus" class="fa solo fa-google-plus"><span>Google+</span></a>
+		<a href="https://plus.google.com/communities/117635218583198517430" class="fa solo fa-google-plus"><span>Google+</span></a>
 	</li>
 	<li>
-		<a href="https://reddit.com/r/jwr" target="reddit" class="fa solo fa-reddit"><span>Reddit</span></a>
+		<a href="https://reddit.com/r/jwr" class="fa solo fa-reddit"><span>Reddit</span></a>
 	</li>
 	<li>
-		<a href="mailto:info@jwronline.be" target="mail" class="fa solo fa-envelope"><span>Mail</span></a>
+		<a href="mailto:info@jwronline.be" class="fa solo fa-envelope"><span>Mail</span></a>
 	</li>
 	<li>
-		<a href="https://github.com/jwronline" target="github" class="fa solo fa-github"><span>GitHub</span></a>
+		<a href="https://github.com/jwronline" class="fa solo fa-github"><span>GitHub</span></a>
 	</li>
 </ul>
 
@@ -218,10 +218,10 @@
 <ul class="menu">
 	<li>&copy; JWR</li>
 	<li>
-		Foto's: Thomas Goethals, <a href="https://reddit.com/u/Tycho234" target="user page">Marc Leatham</a>
+		Foto's: Thomas Goethals, <a href="https://reddit.com/u/Tycho234">Marc Leatham</a>
 	</li>
 	<li>
-		Design: <a href="https://www.facebook.com/Yentltijssens" target="Yentl">Yentl Tijssens</a>, <a href="http://www.haroenv.github.io" target="Haroen">Haroen Viaene</a>
+		Design: <a href="https://www.facebook.com/Yentltijssens" >Yentl Tijssens</a>, <a href="http://www.haroen.me">Haroen Viaene</a>
 	</li>
 </ul>
 </footer>
