--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<h2>De JWR, dat is...</h2>
 			</header>
 			<p>
-				Een gekke club waar je kennis maakt met het grootste avontuur van de mensheid: <strong>ruimtevaart!</strong>
+				Een te gekke club waar je kennis maakt met het grootste avontuur van de mensheid: <strong>ruimtevaart!</strong>
 			</p>
 			<p>
 				<br>beleef je hobby samen met je vrienden
