--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 		Foto's: Thomas Goethals, <a href="https://reddit.com/u/Tycho234">Marc Leatham</a>
 	</li>
 	<li>
-		Design: <a href="https://www.facebook.com/Yentltijssens" >Yentl Tijssens</a>, <a href="http://www.haroen.me">Haroen Viaene</a>
+		Design: <a href="https://www.facebook.com/Yentltijssens" >Yentl Tijssens</a>, <a href="http://haroen.me">Haroen Viaene</a>
 	</li>
 </ul>
 </footer>
