jquery ajax loading

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 	<meta name="description" content="De Jeugdwerkgroep Ruimtevaart(JWR) is een jeugdbeweging gevestigd in centrum Brugge met zowel een jaarwerking als kampen in verschillende vakanties die zich richt op ruimte, ruimtevaart, wetenschap en techniek." />
 	<meta name="keywords" content="jeugdwerking, jwr, ruimte, space, brugge, vvs, sterrenkunde, ruimtevaart, jeugdbeweging, sterren, vlaanderen, belgie, iss, wetenschap, shuttle, japetus, techniek, beisbroek, jeugd, west-vlaanderen, vlaanderen, gent, oostende, veurne, roeselare, kortrijk, gullegem, speelplein, scouts, ksa, vksj, ksj, sint-kruis, moerkerke, thomas goethals, haroen viaene, jochen vansteelant, yentl tijssens, JWR, cosmix, alternatief, fysica, ingenieur, chemie, spelletjes, assebroek, astronomie, telescoop, zon, eurospace, euro space center, eurospace center, euro space, sterrenwacht, mira, astrolab, jcw, kamp" />
 	<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-	<script src="js/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script>
+		if (!window.jQuery) {
+			var jq = document.createElement('script'); jq.type = 'text/javascript';
+			jq.src = 'js/jquery.min.js';
+			document.getElementsByTagName('head')[0].appendChild(jq);
+		}
+	</script>
 	<script src="js/jquery.poptrox.min.js"></script>
 	<script src="js/skel.min.js"></script>
 	<script src="js/init.js"></script>
