--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 	<link rel="icon" href="/apple-touch-icon.png" />
 	<link rel="icon" type="image/png" href="/favicon.png" />
-	<meta property="og:image" content="http://haroen.me/apple-touch-icon.png" />
-		<meta name="twitter:card" content="summary" />
+	<meta property="og:image" content="/apple-touch-icon.png" />
 	<meta name="twitter:site" content="@jwronline" />
 	<meta name="twitter:title" content="Jeugdwerkgroep Ruimtevaart" />
 	<meta name="twitter:domain" content="jwronline.be" />
 	<meta name="twitter:url" content="http://haroen.me/" />
-	<!-- image -->
-	<meta name="twitter:image" content="/apple-touch-icon.png" />
+	<meta name="twitter:description" content="De Jeugdwerkgroep Ruimtevaart(JWR) is een jeugdbeweging gevestigd in centrum Brugge met zowel een jaarwerking als kampen in verschillende vakanties die zich richt op ruimte, ruimtevaart, wetenschap en techniek." />
 	<meta name="description" content="De Jeugdwerkgroep Ruimtevaart(JWR) is een jeugdbeweging gevestigd in centrum Brugge met zowel een jaarwerking als kampen in verschillende vakanties die zich richt op ruimte, ruimtevaart, wetenschap en techniek." />
 	<meta name="keywords" content="jeugdwerking, jwr, ruimte, space, brugge, vvs, sterrenkunde, ruimtevaart, jeugdbeweging, sterren, vlaanderen, belgie, iss, wetenschap, shuttle, japetus, techniek, beisbroek, jeugd, west-vlaanderen, vlaanderen, gent, oostende, veurne, roeselare, kortrijk, gullegem, speelplein, scouts, ksa, vksj, ksj, sint-kruis, moerkerke, thomas goethals, haroen viaene, jochen vansteelant, yentl tijssens, JWR, cosmix, alternatief, fysica, ingenieur, chemie, spelletjes, assebroek, astronomie, telescoop, zon, eurospace, euro space center, eurospace center, euro space, sterrenwacht, mira, astrolab, jcw, kamp" />
 	<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
