--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 	<link rel="icon" href="/apple-touch-icon.png" />
 	<link rel="icon" type="image/png" href="/favicon.png" />
-	<meta property="og:image" content="/apple-touch-icon.png" />
+	<meta property="og:image" content="https://jwronline.be/apple-touch-icon.png" />
 	<meta name="twitter:site" content="@jwronline" />
 	<meta name="twitter:title" content="Jeugdwerkgroep Ruimtevaart" />
 	<meta name="twitter:domain" content="jwronline.be" />
